I added a dowloand button for the CV

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Leandro Pickman</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="icon"
-      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxFvoRX4Y_mAxPaWqaHP5XBrWmjd47UfiM0A&s"
-    />
+    <link rel="icon" href="assets/img/cv-icon.svg" />
   </head>
   <body class="container">
     <div>
@@ -275,6 +272,16 @@
         </tr>
         <tr class="row-dark">
           <td>Argentina</td>
+        </tr>
+        <tr class="row-light">
+          <td>
+            <a
+              class="download-cv"
+              href="CV_Leandro Pickman_Dev.pdf"
+              download="CV_Leandro Pickman_Dev.pdf"
+              >⬇ Descargar CV</a
+            >
+          </td>
         </tr>
       </table>
     </section>
