I added animation to the skills

--- a/index.html
+++ b/index.html
@@ -48,40 +48,66 @@
 
         <section class="skills">
           <h2>SKILLS</h2>
-          <div class="skillbar">
-            <div class="skill">
-              <img src="assets/img/html.svg" alt="Logo HTML5" />
-              <p>HTML</p>
-            </div>
-
-            <div class="skill">
-              <img src="assets/img/css.svg" alt="Logo CSS" />
-              <p>CSS</p>
-            </div>
-
-            <div class="skill">
-              <img src="assets/img/js.svg" alt="Logo JavaScript" />
-              <p>JAVASCRIPT</p>
-            </div>
-
-            <div class="skill">
-              <img src="assets/img/sass.svg" alt="Logo SASS" />
-              <p>SASS</p>
-            </div>
-
-            <div class="skill">
-              <img src="assets/img/react.svg" alt="Logo React" />
-              <p>REACT</p>
-            </div>
-
-            <div class="skill">
-              <img src="assets/img/git.svg" alt="Logo Git" />
-              <p>GIT</p>
-            </div>
-
-            <div class="skill">
-              <img src="assets/img/firebase.svg" alt="Logo FireBase" />
-              <p>FIREBASE</p>
+          <div class="skills">
+            <div class="skillbar">
+              <!-- Repite los íconos de las skills varias veces -->
+              <div class="skill">
+                <img src="assets/img/html.svg" alt="Logo HTML5" />
+                <p>HTML</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/css.svg" alt="Logo CSS" />
+                <p>CSS</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/js.svg" alt="Logo JavaScript" />
+                <p>JAVASCRIPT</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/sass.svg" alt="Logo SASS" />
+                <p>SASS</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/react.svg" alt="Logo React" />
+                <p>REACT</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/git.svg" alt="Logo Git" />
+                <p>GIT</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/firebase.svg" alt="Logo FireBase" />
+                <p>FIREBASE</p>
+              </div>
+              <!-- Duplica los íconos para el efecto infinito -->
+              <div class="skill">
+                <img src="assets/img/html.svg" alt="Logo HTML5" />
+                <p>HTML</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/css.svg" alt="Logo CSS" />
+                <p>CSS</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/js.svg" alt="Logo JavaScript" />
+                <p>JAVASCRIPT</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/sass.svg" alt="Logo SASS" />
+                <p>SASS</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/react.svg" alt="Logo React" />
+                <p>REACT</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/git.svg" alt="Logo Git" />
+                <p>GIT</p>
+              </div>
+              <div class="skill">
+                <img src="assets/img/firebase.svg" alt="Logo FireBase" />
+                <p>FIREBASE</p>
+              </div>
             </div>
           </div>
         </section>
