I added links email and tel in contactame

--- a/index.html
+++ b/index.html
@@ -288,16 +288,20 @@
           <td>26 años</td>
         </tr>
         <tr class="row-light">
-          <td>pickmanleandro1@gmail.com</td>
+          <td>
+            <a href="mailto:pickmanleandro1@gmail.com"
+              >pickmanleandro1@gmail.com</a
+            >
+          </td>
         </tr>
         <tr class="row-dark">
-          <td>+54 11 5107-6044</td>
+          <td><a href="https://wa.me/541151076044">+54 11 5107-6044</a></td>
         </tr>
         <tr class="row-light">
           <td>Belgrano, Capital Federal</td>
         </tr>
         <tr class="row-dark">
-          <td>Argentina</td>
+          <td>Argentina, Buenos Aires</td>
         </tr>
         <tr class="row-light">
           <td>
