--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
         <section class="skills">
-          <h2>SKILLS</h2>
+          <h2>TECNOLOGÍAS</h2>
           <div class="skills">
             <div class="skillbar">
               <!-- Repite los íconos de las skills varias veces -->
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <h2 class="proyect-title">PROYECTOS</h2>
+    <h2 class="proyect-title">EXPERIENCIA</h2>
     <section class="proyects slide scroll-margin-1" id="proyectos">
       <div class="proyect">
         <h3>Gestión de RMA</h3>
@@ -278,6 +278,37 @@
       </div>
     </section>
 
+    <div class="certifications slide">
+      <section class="skills">
+        <h2 class="title-certification">CERTIFICACIONES</h2>
+        <div class="skills">
+          <div class="skillbar">
+            <!-- Repite los íconos de las skills varias veces -->
+            <div class="certification-img">
+              <img src="assets/img/Desarrollo Web.png" alt="Logo HTML5" />
+            </div>
+            <div class="certification-img">
+              <img src="assets/img/JavaScript.png" alt="Logo CSS" />
+            </div>
+            <div class="certification-img">
+              <img src="assets/img/Carrera React.png" alt="Logo JavaScript" />
+            </div>
+
+            <!-- Duplica los íconos para el efecto infinito -->
+            <div class="certification-img">
+              <img src="assets/img/Desarrollo Web.png" alt="Logo HTML5" />
+            </div>
+            <div class="certification-img">
+              <img src="assets/img/JavaScript.png" alt="Logo CSS" />
+            </div>
+            <div class="certification-img">
+              <img src="assets/img/Carrera React.png" alt="Logo JavaScript" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <section class="contact slide" id="contactame">
       <h3 class="title-contact">CONTACTAME</h3>
       <table>
@@ -318,7 +349,7 @@
 
     <footer>
       <nav>
-        <a href="#proyectos">PROYECTOS</a>
+        <a href="#proyectos">EXPERIENCIA</a>
         <a href="#sobre-mi">SOBRE MI</a>
         <a href="#contactame">CONTACTAME</a>
       </nav>
