I added meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Mi Portfolio - Leandro Pickman" />
+    <meta
+      property="og:description"
+      content="Desarrollador Frontend con experiencia en proyectos de React, HTML, CSS y más."
+    />
+    <meta
+      property="og:image"
+      content="https://lpickman.github.io/Portfolio-Leandro-Pickman/assets/images/icon-portfolio.png
+"
+    />
+    <meta
+      property="og:url"
+      content="https://lpickman.github.io/Portfolio-Leandro-Pickman/"
+    />
+    <meta property="og:type" content="website" />
+
     <title>Portfolio - Leandro Pickman</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="assets/img/cv-icon.svg" />
