I modified the titles on the navbar

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <div>
       <header>
         <nav>
-          <a href="#proyectos">PROYECTOS</a>
+          <a href="#proyectos">EXPERIENCIA</a>
           <a href="#sobre-mi">SOBRE MI</a>
+          <a href="#certificados">CERTIFICADOS</a>
           <a href="#contactame">CONTACTAME</a>
         </nav>
       </header>
@@ -295,30 +296,55 @@
     </section>
 
     <div class="certifications slide">
-      <section class="skills">
-        <h2 class="title-certification">CERTIFICACIONES</h2>
+      <section class="skills" id="certificados">
+        <h2 class="title-certification">CERTIFICADOS</h2>
         <div class="skills">
           <div class="skillbar">
             <!-- Repite los íconos de las skills varias veces -->
             <div class="certification-img">
-              <img src="assets/img/Desarrollo Web.png" alt="Logo HTML5" />
+              <img
+                src="assets/img/Desarrollo Web.png"
+                alt="Certificación Desarrollo Web"
+              />
             </div>
             <div class="certification-img">
-              <img src="assets/img/JavaScript.png" alt="Logo CSS" />
+              <img
+                src="assets/img/JavaScript.png"
+                alt="Certificación JavaScript"
+              />
             </div>
             <div class="certification-img">
-              <img src="assets/img/Carrera React.png" alt="Logo JavaScript" />
+              <img
+                src="assets/img/Carrera React.png"
+                alt="Certificación React Carrera"
+              />
+            </div>
+
+            <div class="certification-img">
+              <img src="assets/img/React.png" alt="Certificación React " />
             </div>
 
             <!-- Duplica los íconos para el efecto infinito -->
             <div class="certification-img">
-              <img src="assets/img/Desarrollo Web.png" alt="Logo HTML5" />
+              <img
+                src="assets/img/Desarrollo Web.png"
+                alt="Certificación Desarrollo Web"
+              />
             </div>
             <div class="certification-img">
-              <img src="assets/img/JavaScript.png" alt="Logo CSS" />
+              <img
+                src="assets/img/JavaScript.png"
+                alt="Certificación JavaScript"
+              />
             </div>
             <div class="certification-img">
-              <img src="assets/img/Carrera React.png" alt="Logo JavaScript" />
+              <img
+                src="assets/img/Carrera React.png"
+                alt="Certificación React Carrera"
+              />
+            </div>
+            <div class="certification-img">
+              <img src="assets/img/React.png" alt="Certificación React " />
             </div>
           </div>
         </div>
@@ -367,6 +393,7 @@
       <nav>
         <a href="#proyectos">EXPERIENCIA</a>
         <a href="#sobre-mi">SOBRE MI</a>
+        <a href="#certificados">CERTIFICADOS</a>
         <a href="#contactame">CONTACTAME</a>
       </nav>
     </footer>
