I changed the cv

--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
           <td>
             <a
               class="download-cv"
-              href="CV_Leandro Pickman_Dev.pdf"
-              download="CV_Leandro Pickman_Dev.pdf"
+              href="CV - Leandro Pickman Silva.pdf"
+              download="CV - Leandro Pickman Silva"
               >⬇ Descargar CV</a
             >
           </td>
